--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-# <h1>FinalQ3</h1>
+!DOCTYPE html>
+<html>
+<head>
+        <title>Final Q3</title>
+</head>
+<body>
+   <h1>FinalQ3</h1>
+    <p>CMaxGT Dev,Eng & Computer Science Teacher</p>
+    <p>Contacto:cmaxgt@gmail.com</p>
 <marquee>* * *Proyecto final de Tecnología * * *</marquee>
 * Por medio de su cuenta de Github realizará los cambios solicitados al archivo index.html
 * Utilizará los conceptos aprendidos en clase.
@@ -25,3 +33,5 @@
   
   Aplicar formato a las tablas 1,2,3 borde redondeado de 15px y un color de fondo #0094F9 para el contenido de la misma. 
   Debe tomar en cuenta que el formato para los th ya estan establecidos.
+  </body>
+</html>
